test/files/neg/nowarnMacros.check
Test_2.scala:10: warning: A try without a catch or finally is equivalent to putting its body in a block; no exceptions are handled.
    try 1 // warn
    ^
Test_2.scala:19: warning: A try without a catch or finally is equivalent to putting its body in a block; no exceptions are handled.
    try 1 // warn
    ^
Test_2.scala:28: warning: A try without a catch or finally is equivalent to putting its body in a block; no exceptions are handled.
    try 1 // warn
    ^
error: No warnings can be incurred under -Xfatal-warnings.
three warnings found
one error found
